2005-10-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Changed the way we use tile widgets to work with
	              tile 0.7+ as well as tile 0.6.

2005-10-16  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl (::tkchat::CreateGUI): Add auto bookmark. This is
	(::tkchat::IncrMessageCounter):     set when a message is
	(::tkchat::BookmarkInit):           received while tkchat does
	(::tkchat::BookmarkToggle):         not have focus, making it
	(::tkchat::BookmarkRemoveAuto):     easier to find the point in
	(::tkchat::BookmarkNext):           history that the user was
	(::tkchat::BookmarkPrev):           last active. Can be
	(::tkchat::BookmarkClear):          de/activated via menu.
	(::tkjabber::MsgCB):                Delayed the resetting of
	the message counter in the window title for 5 seconds. Fixed
	a bug found where deleting the current bookmark and then
	attempting to go to the next/prev caused a crash.

	* tkchat.tcl:
	Remove an unused Option, MaxLines, and associated menu.
	Background History loading a bit more.
	Fix singledot elide in tkchat::addAction.

2005-10-01  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl (::tkchat::AddMessage): Modify the Image RE to
	(::tkchat::Insert):                  make it a little more
	(::tkchat::SmileId):                 accurate finding smilies.
	(::tkchat::Smile):

	* tkchat.tcl:
	Add new proc ::tkchat::InsertHistoryMark. Remove a few unused
	variables. Re-order 'if' arguments in ::tkchat::autoStatus to
	avoid unneeded procedure calls.

2005-09-18  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl (::tkchat::addMessage): Change how bookmark marks
	(::tkchat::CreateTxtAndSbar):        are created due to bug
	(::tkchat::StampVis):                found in Tk 8.5 (fix to Tk
	(::tkchat::BookmarkInit):            will change old
	(::tkchat::BookmarkToggle):          behaviour). Add
	(::tkchat::BookmarkClear):           autoscrolling for when